// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pill /> should render a pill 1`] = `
<span
  className="pill alert small"
>
  Test
</span>
`;

exports[`<Pill /> should render a pill with default values 1`] = `
<span
  className="pill neutral small"
>
  Test
</span>
`;
